# weid

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
examples/pbin/: README.md  main.rs
src/: cli.rs  lib.rs  main.rs  outcome.rs  pbin.rs  qa.rs  querier.rs  querylist.rs  util.rs
