[package]
name = "weid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weid"
path = "src/main.rs"

[lib]
name = "weid"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.0.32", features = ["derive"] }
nanoid = "0.4.0"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
termimad = "0.20.6"
