[package]
name = "weid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weid"
path = "src/main.rs"

[lib]
name = "weid"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap_lex = "0.4.1"
nanoid = "0.4.0"
open = "4.0.1"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
spinoff = "0.7.0"
tempfile = "3.4.0"
termimad = "0.20.6"
